# tbas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: abbreviation.md
src/: CMakeLists.txt  ast.c  ast.h  common.h  interpreter.c  interpreter.h  lexical.l  list.c  list.h  main.c  main.h  syntax.y
tests/: sample.bas
